V1.3/README.md
# Decoder for MICA

> [!IMPORTANT]
> Compatible with firmware version 2.7 and above.

## MICA LoRa messages

Three type of messages are possible.

### Configuration message:

Information about the frequency of data upload, the type of ventilation and the status of the LED will appear in the configuration payload.

> [!NOTE]
> LED (on/off) and ventilation type can be configured from the APP.

| Attribute name         | Attribute key | Description                                                                                                                                                             |
| ------------ | -------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Time to send | timeInterval              | Time (in minutes) between each sending of measurements. <br> Default value = 15 minutes.                                                                                                                                               |
| Type of ventilation  | ventilation              | Type of ventilation in the room. This is used for the auto-calibration cycle of the CO₂ sensor.  <br> Possible values: <br> 1 = 'Daily natural ventilation'  <br> 2 = 'Mechanical forced ventilation' <br> 3 = 'Low ventilation' <br> 4 = 'No ventilation' <br> 5 = 'Calibration off'                                                                                                                                  |
| LED status    | ledStatus              | Led status (On or Off). <br> Default value = true                                                                                                                                                  |
| Use WiFi instead | useWifi | Whether to use WiFi instead of LoRaWAN. <br> Default value = false. |
| LoRaWAN Region | lorawanRegion | The LoRaWAN region. |
| LoRaWAN Channel Mask | lorawanChannelMask | The LoRaWAN channel mask. |
| Led Configuration | ledConfiguration | Led indicator configuration. <br> Default value = 0. (Ventilation indicator) <br> <br> 0 = Ventilation indicator <br> 1 = Confort indicator <br> 2 = Temperature indicator <br> 3 = Humidity indicator <br> 4 = CO₂ indicator <br> 5 = VOCS indicator <br> 6 = PM2.5 indicator <br> 7 = PM10 indicator <br> 8 = Virus indicator <br> 9 = IAQ indicator <br> 10 = PM1.0 indicator <br> 11 = PM4 indicator <br> 12 = CH₂O Indicator <br> 13 = O₃ indicator <br> 14 = NO₂ indicator <br> 15 = CO indicator |
Touch Status | touchEnable | Touch status (On or Off). <br> Default value = true. |

> [!NOTE]
> Led configuration depends on the model.

### Information Message

This payload will contain all the MICA information, including the MAC, version, model, type of mica, and information for the Modbus configuration (only in Modbus versions).

> [!NOTE]
> Modbus values can be configured from the APP.

| Attribute name         | Attribute key | Description                                                                                                                                                             |
| ---------------- | -------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Firmware version | fwVersion            | Text string with the device firmware version.                                                                                                                                                                                                                                                             |
| MICA model       | model           | 17-character text string with the MICA model                                                                                                                                                                                                                                                              |
| MICA type        | micaType          | MICA type (MINI, MICA, PLUS, WELL)                                                                                                                                                                                                                                                                        |
| MAC Address            | mac          | Device's MAC                                                                                                                                                                                                                                                                                                 |
| Reset Reason | resetReason | The reason for the last device reset. |

> [!NOTE]
> Modbus values only available in Modbus models.

| Attribute name         | Attribute key | Description                                                                                                                                                             |
| ---------------- | -------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Modbus address   | modbusAddress             | Modbus slave address (0-254). <br> Default value = 1.                                                                                                                                                                                                                                                                                  |
| Modbus parity           | modbusParity             | Different options of parity (0-5). <br> Default value = 0. <br> <br> 0: SERIAL_8N1 (No parity, 1 stop bit) <br> 1: SERIAL_8N2 (No parity, 2 stop bit) <br> 2: SERIAL_8E1 (Even parity, 1 stop bit) <br> 3: SERIAL_8E2 (Even parity, 2 stop bit) <br> 4: SERIAL_8O1 (Odd parity, 1 stop bit) <br> 5: SERIAL_8O2 (Odd parity, 2 stop bit) |
| Modbus baudrate        | modbusBaudRate          | Modbus connection baud rate. <br> Default value = 9600                                                                                                                                                                                                                                                               |

### IAQ Data messages

The indoor air quality (IAQ) data is organized as follows in the message

| Attribute name              | Attribute key     | Range | Description                                                                                                                                                             |
| ----------------- | --------- | -------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Temperature       | temperature | 0.0-145.0ºC            | Temperature value in ºC. <br> <a href="https://www.inbiot.es/wikinbiot/temperature"><img src="https://img.shields.io/badge/Temperature information-blue?style=for-the-badge" alt="Link"/></a>                                                                                           |
| Humidity          | humidity   | 0-100.0%            | Humidity value in %. <br> <a href="https://www.inbiot.es/wikinbiot/relative-humidity"><img src="https://img.shields.io/badge/Humidity information-blue?style=for-the-badge" alt="Link"/></a>                                                                                               |
| CO₂               | co2  | 0-10000 ppm            | CO₂ value in ppm <br> <a href="https://www.inbiot.es/wikinbiot/co2"><img src="https://img.shields.io/badge/CO₂ information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                                        |
| CH2O              | ch20    | 0-5000 µg/m³             | Formaldehyde value in µg/m³ <br> <a href="https://www.inbiot.es/wikinbiot/formaldehyde"><img src="https://img.shields.io/badge/Formaldehyde information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                            |
| TVOC (Total Volatile Organic Compounds)      | tvoc     | 0-500           | TVOC value in index value <br> <a href="https://www.inbiot.es/wikinbiot/tvoc"><img src="https://img.shields.io/badge/TVOC information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                                       |
| PM1_0             | pm1_0   |   0-10000 µg/m³        | PM1.0 value in µg/m³ <br> <a href="https://www.inbiot.es/wikinbiot/particulate-matter"><img src="https://img.shields.io/badge/Particulate matter information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                                   |
| PM2_5             | pm2_5   | 0-10000 µg/m³          | PM2.5 value in µg/m³ <br> <a href="https://www.inbiot.es/wikinbiot/particulate-matter"><img src="https://img.shields.io/badge/Particulate matter information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                                     |
| PM4_0             | pm4   | 0-10000 µg/m³          | PM4.0 value in µg/m³ <br> <a href="https://www.inbiot.es/wikinbiot/particulate-matter"><img src="https://img.shields.io/badge/Particulate matter information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                                   |
| PM10              | pm10   | 0-10000 µg/m³          | PM10 value in µg/m³ <br> <a href="https://www.inbiot.es/wikinbiot/particulate-matter"><img src="https://img.shields.io/badge/Particulate matter information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                                                     |
| O₃                |  o3   | 0-5000 ppb          | **Model WELL exclusive** <br> Ozone value in ppb <br> <a href="https://www.inbiot.es/wikinbiot/ozone"><img src="https://img.shields.io/badge/O₃ information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                       |
| NO₂               |  no2   | 0-2500 ppb          | **Model WELL exclusive** <br> NO₂ value in ppb <br> <a href="https://www.inbiot.es/wikinbiot/nitrogen-dioxide"><img src="https://img.shields.io/badge/NO₂ information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                        |
| CO                | co    | 0-1000 ppm          | **Model WELL exclusive** <br> CO value in ppm <br> <a href="https://www.inbiot.es/wikinbiot/carbon-monoxide"><img src="https://img.shields.io/badge/CO information-blue?style=for-the-badge" alt="Link"/></a> 
| Noise | dB | 30 - 120 dB | **Model with Noise exclusive** <br> Noise value in dB <br> <a href="https://www.inbiot.es/es/wikinbiot/ruido"><img src="https://img.shields.io/badge/Noise information-blue?style=for-the-badge" alt="Link"/></a>                                                                                                                          |
| Ventilation Index | vIndex     | 100-0            | Index value in percentage <br> <a href="https://www.inbiot.es/wikinbiot/indicador-eficacia-ventilacion"><img src="https://img.shields.io/badge/Ventilation Efficiency Indicator Info-blue?style=for-the-badge" alt="Link"/></a>     |
| Thermal Index | tIndex | 0-100 | Thermal comfort index. <br> <a href="https://www.inbiot.es/wikinbiot/indicador-confort-termohigrometrico"><img src="https://img.shields.io/badge/Thermohygrometric Comfort Indicator Info-blue?style=for-the-badge" alt="Link"/></a> |
| Virus Index | virusIndex | 0-100 | Virus risk index. <br> <a href="https://www.inbiot.es/wikinbiot/indicador-resistencia-virus"><img src="https://img.shields.io/badge/Virus Spread Resistance Indicator Info-blue?style=for-the-badge" alt="Link"/></a> |
| IAQ Index | iaqIndex | 0-100 | Indoor air quality index. <br> <a href="https://www.inbiot.es/wikinbiot/indicador-calidad-de-aire-interior"><img src="https://img.shields.io/badge/Indoor Air Quality Indicator Info-blue?style=for-the-badge" alt="Link"/></a> |
| Mold Persistence Index | moldIndex | 0-100 | Mold persistence index. <br> <a href="https://www.inbiot.es/wikinbiot/resistance-to-mold-growth-indicator"><img src="https://img.shields.io/badge/Mold Persistence Indicator Info-blue?style=for-the-badge" alt="Link"/></a> |
| Counter           | counter   | 0-65535          | Counter to know if any packet has been lost.                                                                                                                            |
| MICA type         |  type         |           | MICA type (MINI, MICA, PLUS, WELL)                                                                                                                                      |

> [!IMPORTANT]
> All sensor measurements correspond to 2-byte integer values.

The values provided by the decoder will correspond to those of the sensor integrated into your model.

# Encoder for MICA

The encoder is used to encode downlink messages for the MICA device. It supports multiple platforms, including Chirpstack, The Things Network, and Milesight. The encoder translates configuration parameters into byte arrays that the device can interpret.

## Supported Platforms

- **Chirpstack v4**: Uses the `encodeDownlink` function.
- **Chirpstack v3 and Milesight**: Uses the `Encode` function.
- **The Things Network**: Uses the `Encoder` function.

## Main Encoder Function

The main function, `inbiotDeviceDecode`, processes the input payload and encodes it into a byte array. It supports the following parameters:

| Parameter           | Description                                                                                     | Example Input       |
|---------------------|-------------------------------------------------------------------------------------------------|---------------------|
| `ledStatus`         | Enables or disables the LED. Possible values: `true` (enabled), `false` (disabled).             | `{ "ledStatus": true }` |
| `timeToSend`   | Sets the periodicity of data sending in minutes. Range: `0-60`.     <br> Default configuration = 15 min (value 0)                            | `{ "timeToSend": 10 }` |
| `ventilation`    | Configures the CO₂ sensor calibration. Range: `1-5`.  <br> 1 = Calibration every 48 hours  <br> 2 = Calibration every 24 hours <br> 3 = Calibration every 7 days <br> 4 = Calibration every 15 days <br> 5 = No calibration                                           | `{ "ventilation": 3 }` |
| `ledConfiguration`  | Configures the LED indicator. Range: `0-15`.     <br> 0 = Ventilation indicator <br> 1 = Confort indicator <br> 2 = Temperature indicator <br> 3 = Humidity indicator <br> 4 = CO₂ indicator <br> 5 = VOCS indicator <br> 6 = PM2.5 indicator <br> 7 = PM10 indicator <br> 8 = Virus indicator <br> 9 = IAQ indicator <br> 10 = PM1.0 indicator <br> 11 = PM4 indicator <br> 12 = CH₂O Indicator <br> 13 = O₃ indicator <br> 14 = NO₂ indicator <br> 15 = CO indicator                                                | `{ "ledConfiguration": 4 }` |
| `touchEnable`       | Enables or disables the touch functionality. Possible values: `true` (enabled), `false` (disabled) | `{ "touchEnable": false }` |
| `ARDEnable` | Enables or disables the ADR (Adaptative Data Rate) functionality. Possible values: `true` (enabled), `false` (disabled) | `{ "ARDEnable": true }` |
| `DR` | Sets the Data Rate for the LoRaWAN connection. Range: `0-5`. <br> 0 = SF12 / 125 kHz, bit rate 250 bit/s  <br> 1 = SF11 / 125 kHz, bit rate 440 bit/s <br> 2 = SF10 / 125 kHz, bit rate 980 bit/s   <br> 3 = SF9 / 125 kHz, bit rate 1760 bit/s <br> 4 = SF8 / 125 kHz, bit rate 3125 bit/s <br> 5 = SF7 / 125 kHz, bit rate 5470 bit/s | `{ "DR": 2 }` |
| `sendRetransmissions` | Sets the number of retransmissions for the message. Range: `0-15`. <br> Default value = 5 | `{ "sendRetransmissions": 3 }` |
| `confirmationEnable` | Enables or disables the confirmation functionality. Possible values: `true` (enabled), `false` (disabled) | `{ "confirmationEnable": true }` |
| `resetDevice` | Resets the device. Possible values: `true` (reset), `false` (no reset) | `{ "resetDevice": true }` |

> [!IMPORTANT]
> Make sure to provide the parameters in the correct format. The encoder will return an error if the input is invalid.

> [!NOTE]
>Take into account that if the led parameter is set to a value that is not supported by the model, the change will not be applied.

## Encoding example

Here is an example of how to use the encoder: 

```json

{
// Device configuration
"ledStatus": true,
"tiemToSend": 30,
"co2Calibration": 1,
"ledConfiguration": 4,
"touchEnable": true,
// LoRaWAN configuration
"ADREnable": false,
"DR": 2,
"sendRetransmissions": 5,
"confirmationEnable": true,
"resetDevice": false 
}

```

This will encode the provided parameters into a byte array that the MICA device can interpret.

> [!IMPORTANT]
> At least for this version (v2.7) the downlink message must be unconfirmed.
